# pacd-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
examples/: README.md  data.json
examples/site/: [collection].liquid  index.liquid
site/: index.liquid
src/: config.rs  errors.rs  helpers.rs  lib.rs  main.rs  packer.rs
