[package]
name = "pacd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
env_logger = "0.10.0"
liquid = "0.26.0"
log = "0.4.17"
regex = "1.7.1"
serde = "1.0.152"
serde_json = "1.0.91"
thiserror = "1.0.38"
walkdir = "2.3.2"
