[package]
name = "pacd"
version = "0.3.0-alpha"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
crossbeam = "0.8.2"
env_logger = "0.10.0"
flate2 = "1.0.25"
liquid = "0.26.0"
log = "0.4.17"
notify = "5.1.0"
notify-debouncer-mini = "0.2.1"
regex = "1.7.1"
serde_json = "1.0.91"
tar = "0.4.38"
tempfile = "3.3.0"
thiserror = "1.0.38"
walkdir = "2.3.2"
